Fix URLs overflowing

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -226,6 +226,8 @@ main {
     margin: 1rem;
     font-family: 'Open Sans';
     font-size: 18px;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
 }
 
 .content dt {
